force-app/main/default/objects/Species__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Describe the plant style details and something else.</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>