force-app/main/default/objects/Species__c/fields/Plants_Stock__c.field-meta.xml
<CustomField>
    <fullName>Plants_Stock__c</fullName>
    <description>Quantity of plants in stock.</description>
    <label>Plants Stock</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>