force-app/main/default/objects/Species__c/recordTypes/Species_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Species_Record_Type</fullName>
    <active>true</active>
    <label>Species Record Type</label>
</RecordType>