force-app/main/default/objects/Species__c/validationRules/Quantity_Plants_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Quantity_Plants_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISNULL( Plants_Stock__c ), ISBLANK( TEXT( Type__c ) ))</errorConditionFormula>
    <errorMessage>Please fill all the information in a correct way.</errorMessage>
</ValidationRule>