force-app/main/default/objects/Species__c/listViews/Gift_Plants.listView-meta.xml
<ListView>
    <fullName>Gift_Plants</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Edible</value>
    </filters>
    <label>Edible Gift Plants</label>
</ListView>