force-app/main/default/objects/Species__c/listViews/Ornamental_Gift_Plants.listView-meta.xml
<ListView>
    <fullName>Ornamental_Gift_Plants</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Ornamental</value>
    </filters>
    <label>Ornamental Gift Plants</label>
</ListView>